hard-gists/4034427/run.log
=== Docker Run Log for 4034427 ===
Started at: Mi 29. Okt 14:18:00 CET 2025

[2025-10-29 14:18:00] START: Running container for 4034427
[2025-10-29 14:18:00] SUCCESS: Container 485b270447f122a7867084e1f1195bcb63d24b71b12fae37a5e88cfd559595c4 started for 4034427
=== Container logs for 4034427 ===
  File "/snippet.py", line 27
    print 'Processing image... ' + str(int(float(i)/outline * 100)) + '%'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4034427 ===
[2025-10-29 14:18:02] INFO: Container 485b270447f122a7867084e1f1195bcb63d24b71b12fae37a5e88cfd559595c4 has stopped
